package abstractThings;

public class Narrator {
    private Narrator(){}
    public static void tell (String message) {
        System.out.println(message);
    }
}
