package interfaces;

import abstractThings.MentalHealth;

public interface MentalHealthable {
    public MentalHealth getMentalHealth();
}
