package things;

public class MarmeladeWell extends Well {
    public MarmeladeWell(Pit pit) {
        super(pit);
    }
}
