package things;

public class WaterWell extends Well {
    public WaterWell(Pit pit) {
        super(pit);
    }
}
